# foreshadwownba-data-engineering-pipeline

./: .gitignore  NBA_API_PIPELINE_DOCUMENTATION.md  Pipfile  PlayerAttributesAndBoxscoreAnalysis.ipynb  README.md  WebscrappingManualScript.ipynb  __main__.py  airflow_tuto.txt  docs.txt  dvc.yaml  dvc_template.yaml  manual_process.ipynb  manual_verif.ipynb  params.yaml  pyproject.toml
.github/workflows/: cml.yaml
airflow/dags/: tutorial.py
constants/: team_city_refdata.csv
dags/: dag.py  inseason_dags.py
functions/: FAKE_webscrapp_basketballreference.py  GetNbaGameDataCombinedCleaned.py  GetNbaPlayerDataCombinedCleanedProcessed.py  GetNbaWebScrapDataCombinedCleaned.py  ManualRecodePlayerIdWebscrappe.py  WebScrapNbaData.py  WebScrapNbaGameData.py  WebScrapNbaPlayersBoxscores.py  WebScrapNbaPlayersGameData.py  WebScrapNbaPlayersListAndAttributes.py  WebScrapNbaSalary.py
notebooks/: __main__.py  dag copy.py  nba_players.json
pipeline_output/: .gitignore
pipeline_output/backup_dataset/: schedules_training_dataset_2022-01-20.csv
src/exctract/: gamelog_data_acquisition.py  nba_api_gamelog_data_acquisition.py  player_attributes_data_acquisition.py  player_game_logs_data_acquisition.py  player_gamelogs_data_acquisition.py  player_salary_data_acquisition.py  players_gamleogs_data_acquisition.py  schedule_data_acquisition.py
src/load/: load_data_to_db.py  load_gamelog_and_schedule_to_csv.py  load_gamelog_schedule_unified_to_csv.py  load_gamelog_schedule_unified_to_db.py  load_player_attributes_salaries_unified_to_csv.py  load_player_attributes_salaries_unified_to_db.py
src/stages/: player_attributes_data_acquisition.py  schedule_data_acquisition.py
src/transform/: gamelog_cleaning_and_transformation.py  gamelog_schedule_unification.py  nba_api_gamelog_transformation.py  player_attributes_salaries_unification.py  player_game_logs_cleaning_and_transformation.py  schedule_cleaning_and_transformation.py
tests/: test_gamelog_data_acquisition.py  test_gamelog_schedule_unification.py  test_nba_api_gamelog_pipeline.py  test_player_attributes_data_acquisition.py  test_player_attributes_salaries_unification.py  test_player_game_logs_data_acquisition.py  test_player_gamelogs_data_acquisition.py  test_schedule_data_acquisition.py
